# rinha-backend-23

./: .dockerignore  .editorconfig  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requests.md  run.sh
confs/: nginx.conf  pg_init.sh  postgresql.conf
loadtest/: load_all_routes.py
reports/: primeira_versao.html  segunda_versao.html  terceira_versao.html
rinha/: app.py  database.py  lifespan.py  server.py  util.py
rinha/handlers/: healthcheck.py  pessoas.py
rinha/models/: pessoa.py
rinha/tasks/: pessoa_buffer.py
